fix color contrast of success cards
fixes #3

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7126,7 +7126,7 @@ button.bg-secondary:focus {
 }
 
 .bg-success {
-  background-color: #00bc8c !important;
+  background-color: #008261 !important;
 }
 
 a.bg-success:hover, a.bg-success:focus,
